--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section id="transaction">
                 <h2 class="sr-only">Transações</h2>
 
-                <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+                <a href="#" onclick="Modal.open(-1)" class="button new">+ Nova Transação</a>
                 
                 <table id="data-table">
                     <thead>
@@ -72,6 +72,7 @@
                 <div id="form">
                     <h2>Nova transação</h2>
                     <form action="" onsubmit="Form.submit(event)">
+                        <input type="hidden" id="index" name="index" value="-1">
                         <div class="input-group">
                             <label class="sr-only" for="description">Descrição</label>
                             <input type="text" id="description" name="description" placeholder="Descrição">
